--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "target": "es5",
     "lib": [
       "dom",
@@ -18,9 +19,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "noImplicitAny": true,
+    "strictNullChecks": true,
   },
   "include": [
     "src"
+  ],
+  "typeRoots": [
+    "./node_modules/@types/**/*.d.ts",
+    "./src/types/*.ts",
   ]
 }
