--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/d3-scale": "^4.0.2",
     "@types/lodash": "^4.14.182",
     "node-sass": "^7.0.1"
   }
